--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,8 @@
 <html>
   <head>
     <script src="https://static.nid.naver.com/js/naveridlogin_js_sdk_2.0.0.js"></script>
+    <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
+    
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>ZUMUNIYO</title>
